manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-questionnaires
  namespace: sdv-mvp
  labels:
    worker: "no"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-questionnaires
      tier: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app: svc-questionnaires
        track: stable
        tier: web
    spec:
      imagePullSecrets:
        - name: gitlab-auth
      containers:
        - name: svc-questionnaires
          imagePullPolicy: Always
          image: registry.gitlab.com/researchable/sport-data-valley/mvp/svc-questionnaires:__CI_COMMIT_SHA__
          ports:
          - containerPort: 3000
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /status
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 200
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /status
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 200
            timeoutSeconds: 5
            periodSeconds: 5
