manifests/worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: sdv-mvp
  name: svc-questionnaires-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-questionnaires
      tier: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app: svc-questionnaires
        track: stable
        tier: worker
    spec:
      imagePullSecrets:
        - name: gitlab-auth
      containers:
        - name: svc-questionnaires
          imagePullPolicy: Always
          image: registry.gitlab.com/researchable/sport-data-valley/mvp/svc-questionnaires:__CI_COMMIT_SHA__
          command: ['rake', 'jobs:work']
