manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-questionnaires-service
  namespace: sdv-mvp
  labels:
    app: svc-questionnaires
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: svc-questionnaires
    tier: web
