manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: svc-questionnaires
  namespace: sdv-mvp
  labels:
    app: svc-questionnaires
spec:
  rules:
  - host: svc-questionnaires.researchable.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-questionnaires-service
          servicePort: 3000
