manifests/ingress_DEVELOP.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: svc-questionnaires
  namespace: sdv-mvp-develop
  labels:
    app: svc-questionnaires
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-master"
spec:
  tls:
  - hosts:
    - svc-questionnaires.sportdatavalley.dev
    - svc-questionnaires.researchable.nl
    secretName: sportdatavalley-tls
  rules:
  - host: svc-questionnaires.researchable.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-questionnaires-service
          servicePort: 3000
  - host: svc-questionnaires.sportdatavalley.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-questionnaires-service
          servicePort: 3000
